--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,17 @@
 page-contact {
-
+    button {
+        width: 50px;
+        height: 50px;
+        ion-badge {
+            position: absolute;
+            top: -0.2rem;
+            right: -0.2rem;
+            // opacity: 0.9;
+            border-radius: 50% !important;
+    
+            & ~ ion-icon {
+                margin-right: 1.2rem;
+            }
+        }
+    }
 }
